--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -48,7 +48,7 @@
             <div id="main-menu" class="main-menu collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="index.html"> <i class="menu-icon fa fa-dashboard"></i>Dashboard Administrador</a>
+                        <a th:href="@{index}"> <i class="menu-icon fa fa-dashboard"></i>Dashboard Administrador</a>
                     </li>
                     <h3 class="menu-title">Administración de equipos</h3><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
