--- a/src/main/resources/templates/equipo/form.html
+++ b/src/main/resources/templates/equipo/form.html
@@ -1,34 +1,316 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-    
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> 
+<html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>PMRTI</title>
+        <meta name="description" content="Sufee Admin - HTML5 Admin Template">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" href="apple-icon.png">
+        <link rel="shortcut icon" href="favicon.ico">
+
+        <link rel="stylesheet" href="../../css/normalize.css">
+        <link rel="stylesheet" href="../../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../css/themify-icons.css">
+        <link rel="stylesheet" href="../../css/flag-icon.min.css">
+        <link rel="stylesheet" href="../../css/cs-skin-elastic.css">
+        <!-- <link rel="stylesheet" href="assets/css/bootstrap-select.less"> -->
+        <link rel="stylesheet" href="../../scss/style.css">
+        <link href="../../css/lib/vector-map/jqvmap.min.css" rel="stylesheet">
+
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+
+        <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
+
     </head>
     <body>
-        <div>from para equipo</div>
-       
-         <form th:action="@{/equipo/from}" th:object="${Equipo}" method="post" enctype="multipart/form-data">
-                
-             <select th:field="*{tipoEquipo}" class="form-control"  id="testOrder" name="testOrder">
-                    <option value="">Tipo Equipo</option>
-                    <option th:each="tipoEqui : ${listTipoEqui}"
-                            th:value="${tipoEqui.id_tipo_equipo}"
-                            th:text="${tipoEqui.nombre}"></option>
-             </select><br/>
-             serie:<input type="text" th:field="*{serie}"/><br/>
-             codigo interno:<input type="text" th:field="*{cod_interno}"/><br/>
-             marca:<input type="text" th:field="*{marca}"/><br/>
-             modelo:<input type="text" th:field="*{modelo}"/><br/>
-             
-            <input type="submit" value="enviar"/>
-            
-         </form>
+
+
+        <!-- Left Panel -->
+
+        <aside id="left-panel" class="left-panel">
+            <nav class="navbar navbar-expand-sm navbar-default">
+
+                <div class="navbar-header">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                    <a class="navbar-brand" href="./">PMRTI</a>
+                    <a class="navbar-brand hidden" href="./"><img src="../../images/logo2.png" alt="Logo"></a>
+                </div>
+
+                <div id="main-menu" class="main-menu collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active">
+                            <a th:href="@{index}"> <i class="menu-icon fa fa-dashboard"></i>Dashboard Administrador</a>
+                        </li>
+                        <h3 class="menu-title">Administración de equipos</h3><!-- /.menu-title -->
+                        <li class="menu-item-has-children dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>Equipos</a>
+                            <ul class="sub-menu children dropdown-menu">
+                                <li><i class="fa fa-puzzle-piece"></i><a th:href="@{/equipo/form}">Registrar Equipos</a></li>
+                                <li><i class="fa fa-bars"></i><a th:href="@{/equipo/listar}">Listar Equipos</a></li>
+                                <li><i class="fa fa-wrench"></i><a th:href="@{/tipoEquipo/listar}">Tipos de equipos</a></li>
+                                <li><i class="fa fa-th"></i><a href="ui-grids.html">Grids</a></li>
+                            </ul>
+                        </li>
+                        <h3 class="menu-title">Administración de usuarios</h3><!-- /.menu-title -->
+
+                        <li class="menu-item-has-children dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-users"></i>Usuarios</a>
+                            <ul class="sub-menu children dropdown-menu">
+                                <li><i class="menu-icon fa fa-user"></i><a href="font-fontawesome.html">Crear usuario</a></li>
+                                <li><i class="menu-icon fa fa-key"></i><a href="font-themify.html">Cambiar contraseñas</a></li>
+                            </ul>
+                        </li>
+
+                        <h3 class="menu-title">Extras</h3><!-- /.menu-title -->
+                        <li class="menu-item-has-children dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Pages</a>
+                            <ul class="sub-menu children dropdown-menu">
+                                <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
+                                <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>
+                                <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Forget Pass</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </nav>
+        </aside><!-- /#left-panel -->
+
+        <!-- Left Panel -->
+
+        <!-- Right Panel -->
+
+        <div id="right-panel" class="right-panel">
+
+            <!-- Header-->
+            <header id="header" class="header">
+
+                <div class="header-menu">
+
+                    <div class="col-sm-7">
+                        <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>
+                        <div class="header-left">
+                            <button class="search-trigger"><i class="fa fa-search"></i></button>
+                            <div class="form-inline">
+                                <form class="search-form">
+                                    <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search">
+                                    <button class="search-close" type="submit"><i class="fa fa-close"></i></button>
+                                </form>
+                            </div>
+
+                            <div class="dropdown for-notification">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="notification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fa fa-bell"></i>
+                                    <span class="count bg-danger">5</span>
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="notification">
+                                    <p class="red">You have 3 Notification</p>
+                                    <a class="dropdown-item media bg-flat-color-1" href="#">
+                                        <i class="fa fa-check"></i>
+                                        <p>Server #1 overloaded.</p>
+                                    </a>
+                                    <a class="dropdown-item media bg-flat-color-4" href="#">
+                                        <i class="fa fa-info"></i>
+                                        <p>Server #2 overloaded.</p>
+                                    </a>
+                                    <a class="dropdown-item media bg-flat-color-5" href="#">
+                                        <i class="fa fa-warning"></i>
+                                        <p>Server #3 overloaded.</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-5">
+                        <div class="user-area dropdown float-right">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img class="user-avatar rounded-circle" src="../../images/admin.jpg" alt="User Avatar">
+                            </a>
+
+                            <div class="user-menu dropdown-menu">
+                                <a class="nav-link" href="#"><i class="fa fa- user"></i>My Profile</a>
+
+                                <a class="nav-link" href="#"><i class="fa fa -cog"></i>Settings</a>
+
+                                <a class="nav-link" href="#"><i class="fa fa-power -off"></i>Logout</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </header><!-- /header -->
+            <!-- Header-->
+
+            <div class="breadcrumbs">
+                <div class="col-sm-4">
+                    <div class="page-header float-left">
+                        <div class="page-title">
+                            <h1>Equipos</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                    <div class="page-header float-right">
+                        <div class="page-title">
+                            <ol class="breadcrumb text-right">
+                                <li class="active">Registrar equipos</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content mt-3">
+
+                <!-- Ejemplo de alerta-->
+
+                <!--            <div class="col-sm-12">
+                                <div class="alert  alert-success alert-dismissible fade show" role="alert">
+                                  <span class="badge badge-pill badge-success">Success</span> You successfully read this important alert message.
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>-->
+
+
+                <div class="col-xl-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <h4 class="card-title mb-0">Registrar Equipo</h4>
+                                    <div class="small text-muted">Datos del equipo</div>
+                                </div>
+                                <!--/.col-->
+                                <!--/.col-->
+                            <div class="col-sm-8 hidden-sm-down">
+                                
+                            </div>
+                                <!--/.col-->
+                                <div class="chart-wrapper mt-4" >
+                                    <form th:action="@{/equipo/form}" th:object="${Equipo}" method="post" enctype="multipart/form-data" class="form-horizontal">
+
+                                        <div class="form-group">
+                                            <label for="testOrder" class="control-label">Tipo de equipo</label>
+                                            <select th:field="*{tipoEquipo}" class="form-control"  id="testOrder" name="testOrder">
+                                                <option value="">Tipo Equipo</option>
+                                                <option th:each="tipoEqui : ${listTipoEqui}"
+                                                        th:value="${tipoEqui.id_tipo_equipo}"
+                                                        th:text="${tipoEqui.nombre}"></option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="serie" class="control-label">Serie</label>
+                                            <div>
+                                                <input type="text" th:field="*{serie}" class="form-control" id="serie"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="cod_interno" class="control-label">Codigo interno</label>
+                                            <div>
+                                                <input type="text" th:field="*{cod_interno}" class="form-control" id="cod_interno"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="marca" class="control-label">Marca</label>
+                                            <div>
+                                                <input type="text" th:field="*{marca}" class="form-control" id="marca"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="modelo" class="control-label">Modelo</label>
+                                            <div>
+                                                <input type="text" th:field="*{modelo}" class="form-control" id="modelo"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div>
+                                                <button type="submit" class="btn btn-primary">Enviar</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                <!--/.col-->
+                            </div><!--/.row-->
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-lg-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="stat-widget-one">
+                                <div class="stat-icon dib"><i class="ti-user text-primary border-primary"></i></div>
+                                <div class="stat-content dib">
+                                    <div class="stat-text">Equipos asignados</div>
+                                    <div class="stat-digit">260</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-lg-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="stat-widget-one">
+                                <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>
+                                <div class="stat-content dib">
+                                    <div class="stat-text">Equipos en prestamo</div>
+                                    <div class="stat-digit">15</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div> <!-- .content -->
+        </div><!-- /#right-panel -->
+
+        <!-- Right Panel -->
+
+        <script src="../../js/vendor/jquery-2.1.4.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+        <script src="../../js/plugins.js"></script>
+        <script src="../../js/main.js"></script>
+
+
+        <script src="../../js/lib/chart-js/Chart.bundle.js"></script>
+        <script src="../../js/dashboard.js"></script>
+        <script src="../../js/widgets.js"></script>
+        <script src="../../js/lib/vector-map/jquery.vmap.js"></script>
+        <script src="../../js/lib/vector-map/jquery.vmap.min.js"></script>
+        <script src="../../js/lib/vector-map/jquery.vmap.sampledata.js"></script>
+        <script src="../../js/lib/vector-map/country/jquery.vmap.world.js"></script>
+        <script>
+            (function ($) {
+                "use strict";
+
+                jQuery('#vmap').vectorMap({
+                    map: 'world_en',
+                    backgroundColor: null,
+                    color: '#ffffff',
+                    hoverOpacity: 0.7,
+                    selectedColor: '#1de9b6',
+                    enableZoom: true,
+                    showTooltip: true,
+                    values: sample_data,
+                    scaleColors: ['#1de9b6', '#03a9f5'],
+                    normalizeFunction: 'polynomial'
+                });
+            })(jQuery);
+        </script>
+
     </body>
 </html>
