--- a/src/main/resources/templates/login/page-login.html
+++ b/src/main/resources/templates/login/page-login.html
@@ -40,7 +40,7 @@
                     </a>
                 </div>
                 <div class="login-form">
-                    <form th:action="@{/login/page-login}" method="post">
+                    <form th:action="@{/page-login}" method="post">
                         <div class="form-group">
                             <label>Direccion Email</label>
                             <input type="email" class="form-control" placeholder="Email">
