--- a/src/main/resources/templates/equipo/listar.html
+++ b/src/main/resources/templates/equipo/listar.html
@@ -250,7 +250,7 @@
                                                 <td th:text="${equipo.modelo}">
                                                     modelo
                                                 </td>
-                                                <td th:text="${equipo.estado}">
+                                                <td th:text="${equipo.estado.descEstado}">
                                                     estado
                                                 </td>
                                                 <th>
