--- a/src/main/resources/templates/equipo/form.html
+++ b/src/main/resources/templates/equipo/form.html
@@ -210,6 +210,16 @@
                                             </select>
                                         </div>
                                         <div class="form-group">
+                                            <label for="testOrder" class="control-label">Estado del esquipo</label>
+                                            <select th:field="*{estado}" class="form-control"   >
+                                                <option value="">estado</option>
+                                                <option th:each="estado : ${listEstado}"
+                                                        th:value="${estado.id}"
+                                                        th:text="${estado.descEstado}"></option>
+                                            </select>
+                                        </div>
+                                        
+                                        <div class="form-group">
                                             <label for="serie" class="control-label">Serie</label>
                                             <div>
                                                 <input type="text" th:field="*{serie}" class="form-control" id="serie"/>
@@ -233,11 +243,13 @@
                                                 <input type="text" th:field="*{modelo}" class="form-control" id="modelo"/>
                                             </div>
                                         </div>
+                                        
                                         <div class="form-group">
                                             <div>
                                                 <button type="submit" class="btn btn-primary">Enviar</button>
                                             </div>
                                         </div>
+                                        
                                     </form>
                                 </div>
                                 <!--/.col-->
