--- a/src/main/resources/templates/user/listar.html
+++ b/src/main/resources/templates/user/listar.html
@@ -43,6 +43,7 @@ and open the template in the editor.
                                                 <th>nombre</th>
                                                 <th>apellidos</th>
                                                 <th>Email</th>
+                                                <th>departamento</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -50,6 +51,7 @@ and open the template in the editor.
                                                 <td th:text="${user.name}" ></td>
                                                 <td th:text="${user.lastName}" ></td>
                                                 <td th:text="${user.email}" ></td>
+                                                <td th:text="${user.departamento}"></td>
                                             </tr>
                                         </tbody>
                                     </table>
