--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -137,7 +137,7 @@
                         </a>
 
                         <div class="user-menu dropdown-menu">
-                                <a class="nav-link" href="#"><i class="fa fa- user"></i>My Profile</a>
+                                <a class="nav-link" href="#"><i class="fa fa- user" th:text="${session.usuario.name}" ></i></a>
 
                                 <a class="nav-link" href="#"><i class="fa fa -cog"></i>Settings</a>
 
