--- a/src/main/resources/templates/login/page-login.html
+++ b/src/main/resources/templates/login/page-login.html
@@ -38,16 +38,16 @@
                     <a href="index.html">
                         PMRTI
                     </a>
-                </div>
+                </div> 
                 <div class="login-form">
-                    <form th:action="@{/page-login}" method="post">
+                    <form th:action="@{/page-login}" th:object="${Login}" enctype="multipart/form-data" method="post">
                         <div class="form-group">
                             <label>Direccion Email</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="text" th:field="*{user}" class="form-control" placeholder="Usuario">
                         </div>
                         <div class="form-group">
                             <label>Contraseña</label>
-                            <input type="password" class="form-control" placeholder="Contraseña">
+                            <input type="password" th:field="*{pass}" class="form-control" placeholder="Contraseña">
                         </div>
                         <div class="checkbox">
                             <label>
