--- a/src/main/resources/templates/tmpUsuario/listar.html
+++ b/src/main/resources/templates/tmpUsuario/listar.html
@@ -4,18 +4,13 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org"> 
+<html>
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Editar Tipo equipo</div>
-        <form th:action="@{/tipoEquipo/editar}" th:object="${TipoEquipo}" method="post" enctype="multipart/form-data">
-            
-            <input type="text" th:field="*{nombre}" th:value="${TipoEquipo.id_tipo_equipo}"/>
-            <input type="submit" value="enviar"/>
-        </form>
+        <div>TODO write content</div>
     </body>
 </html>
